# htmldiff2

./: .gitignore  README.md  htmldiff2.py  pyproject.toml  test.py
.github/workflows/: test.yml
docs/: handoff_docs.md  walkthrough.md
htmldiff2/: __init__.py  atomization.py  config.py  differ.py  normalization.py  parser.py  utils.py
scripts/: check_config.py  repro_bullets_group.py  repro_nodulos_remove_col_previo.py  repro_pairs.py  repro_table_delete_column.py  repro_table_remove_description_column_exact.py  repro_td_style.py
src/htmldiff2/: __init__.py  atomization.py  block_processor.py  config.py  diff_inline_formatting.py  differ.py  event_differ.py  normalization.py  table_differ.py  text_differ.py  utils.py  visual_replace.py
tests/: test_regressions.py
