[project]
name = "htmldiff2"
version = "0.2.2"
description = "Diffs arbitrary HTML inline."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = ["genshi", "html5lib"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]